2011-01-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (xtick_callback ytick_callback ztick_callbacke):
	Gnuplot uses two different pathways to convert 3D coordinates in user
	space into 2D coordinates in the terminal coordinate space.  One of
	these goes via map3d_xyz() and TERMCOORD(); the other uses map3d_xy().
	Unfortunately it seems the two paths can differ by +/- one pixel in the
	final terminal coordinates.  This discrepancy is particularly
	noticeable in the grid and axis tic placement of 3D plots after
	"set view map" (Bug #3157712).
	This patch switches the tick_callback() routines to use the map3d_xy()
	pathway, which fixes the problem case described by the bug report.
	It would be good to fix also the map3d_xyz() + TERMCOORD() pathway in
	general so that the discrepancy doesn't occur in other conditions.
	Bug #3157712

2011-01-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (place_raxis): If the polar axis maximum is autoscaled,
	draw the raxis all the way to that maximum value.
	Bug #3153406

	* term/post.trm: Replace a use-once character array by a literal string.

2011-01-18  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* src/wxterminal/gp_cairo.c:  Cast size_t arguments to (int).

2011-01-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgraph.c:  Pass mouse wheel events through to the core
	mousing code so that interactive pan/zoom works from the windows
	terminal.

2011-01-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_logscale set_autoscale) src/unset.c (unset_autoscale)
	src/axis.h docs/gnuplot.doc:  Remove macro INIT_AXIS_ARRAY.
	"set logscale" should not affect pseudo-axes.
	Bug #3159062

2011-01-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots):  Minimum value of polar axis always
	auto-scales to 0 (already documented but implementation lacked).

2011-01-10  David Kuehling <dvdkhlng@gmx.de>
